--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,103 @@
+* {
+    /* border: red 2px solid; */
+}
+
 body {
     margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 200vh;
+    height: 225vh;
     width: 1000px;
+    font-family: "Roboto", sans-serif;
 }
 
 .one, .two, .three, .four {
-    /* border: red 2px solid; */
     flex: 1;
+    display: flex;
 }
 
 .one {
     background-color: #1F2937;
+    color: #F9FAF8;
+}
+
+.one .container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+
+.header p {
+    margin: 0;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.header ul {
+    display: flex;
+    list-style-type: none;
+    gap: 16px;
+}
+
+.header a {
+    text-decoration: none;
+    color: #F9FAF8;
+}
+
+.one .content {
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
+.one .media {
+    display: flex;
+    gap: 52px;
+    padding-bottom: 52px;
+}
+
+.one .text-content {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    flex: 1;
+}
+
+.one button {
+    width: fit-content;
+    padding: 4px 24px;
+    border-radius: 4px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: 0;
+}
+
+.one .image-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.2);
+    flex: 1;
+}
+
+.one h1, .one p {
+    margin: 0;
+    padding: 0;
+}
+
+.one h1 {
+    font-size: 36px;
+    font-weight: bolder;
 }
 
 .three {
