--- a/styles.css
+++ b/styles.css
@@ -157,13 +157,12 @@ body {
     margin: 0 auto;
     display: flex;
     align-items: center;
-    /* border: red 2px solid; */
 }
 
 .three .quote-content {
     margin: 0;
     font-size: 36px;
-    /* border: red 2px solid; */
+    font-weight: 100;
 }
 
 .three .quote-author {
@@ -171,7 +170,6 @@ body {
     text-align: right;
     font-size: 24px;
     font-weight: bold;
-    /* border: red 2px solid; */
 }
 
 .four {
