Change body height to a defined pixel amount
Depending on the size of a user's device, elements may appear
to be further apart than they actually are if the body's height
is measured in terms of the visible viewport (essentially, the
elements will look more spread apart if you zoom out while viewing
on a computer). Thus, a defined pixel amount that does not change
as the viewport gets larger or smaller solves the issue.

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
-* {
-    /* border: red 2px solid; */
-}
-
 body {
     margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 225vh;
+    height: 1750px;
     width: 1000px;
     font-family: "Roboto", sans-serif;
 }
